--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,11 +6,13 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Preview Vue3 Vuetify3(Beta)TypeScript Pinia Vite </title>
+  <script type="module" crossorigin src="/assets/index.b1c06d54.js"></script>
+  <link rel="stylesheet" href="/assets/index.7de38e82.css">
 </head>
 
 <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    
 </body>
 
 </html>
